--- a/_posts/2021-10-03-setuptools-45.2.0.md
+++ b/_posts/2021-10-03-setuptools-45.2.0.md
@@ -12,10 +12,16 @@ categories:
 tags:  
    - setuptools
 ---
-**package name**: setuptools
+_Package details_
+
+**name**: setuptools
+
 **version**: 45.2.0
+
 **description**: Easily download, build, install, upgrade, and uninstall Python packages
+
 **author**: Python Packaging Authority
+
 **number of Python files**: 145
 
    (537 characters, 38 words)
