--- a/_posts/2021-10-03-setuptools-45.2.0.md
+++ b/_posts/2021-10-03-setuptools-45.2.0.md
@@ -12,7 +12,7 @@ categories:
 tags:  
    - setuptools
 ---
-_Package details_
+_Package details:_
 
 **name**: setuptools
 
@@ -24,10 +24,10 @@ _Package details_
 
 **number of Python files**: 145
 
-   (537 characters, 38 words)
+---
+
 
 - `folder/setuptools-45.2.0/conftest.py` 
-
    (537 characters, 38 words)
     import modules: `sys` 
     functions: `pytest_addoption` 
