--- a/_posts/2021-10-09-keras-2.6.0.md
+++ b/_posts/2021-10-09-keras-2.6.0.md
@@ -1,10 +1,10 @@
 ---
 id: 12971
-title: keras
+title: keras-2.6.0
 date: 2020-02-14
 author: auto-mik
 layout: post
-permalink: /python/keras-2.6.0.dist-info/
+permalink: /python/keras-2.6.0/
 published: true
 image:
 categories:
