--- a/_posts/2021-10-09-setuptools-58.2.0.md
+++ b/_posts/2021-10-09-setuptools-58.2.0.md
@@ -14,27 +14,15 @@ tags:
 ---
 _**Package details:**_
 
+**Name**: setuptools
 
+**Version**: 58.2.0
 
+**Author**: Python Packaging Authority
 
-
-**name**: setuptools
-
-**version**: 58.2.0
-
-**author**: Python Packaging Authority
-
-
-
-**number of Python files**: 247
-
-
+**Number of Python files**: 247
 
 ---
-
-
-
-
 
 - `setuptools-58.2.0/pavement.py` 
 
