--- a/_posts/2021-10-03-setuptools-45.2.0.md
+++ b/_posts/2021-10-03-setuptools-45.2.0.md
@@ -4,7 +4,7 @@ title: setuptools
 date: 2020-02-14
 author: auto-mik
 layout: post
-redirect_from: /python/setuptools
+redirect_from: /python/setuptools/
 permalink: /python/setuptools-45.2.0/
 published: true
 image:
